--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>uiproject</title>
+    <title>Data Protection Breach</title>
+
+    <base href="./">
     <meta name="description" content="uiproject description">
 
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
 
-    <script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-
-    <script type="module" src="/src/uiproject-app/uiproject-app.js" crossorigin></script>
+    <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"  crossorigin></script>
+<script src="./node_modules/web-animations-js/web-animations-next.min.js"  crossorigin></script>
+    <script type="module" src="./src/uiproject-app/uiproject-app.js" crossorigin></script>
   </head>
   <body>
     <uiproject-app></uiproject-app>
