Build configure changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="uiproject description">
 
     <!-- See https://goo.gl/OOhYW5 -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
 
     <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"  crossorigin></script>
 <script src="./node_modules/web-animations-js/web-animations-next.min.js"  crossorigin></script>
